--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ ich świata, mechanik oraz linki do przydatnych informacji. Zapraszam do
 odkrywania!</p>
 <h2 id="linki-do-stron">Linki do stron:</h2>
 <ul>
-<li><a href="wiedzmin3.md">Wiedźmin 3: Dziki Gon</a></li>
-<li><a href="ark.md">Ark: Survival Evolved</a></li>
-<li><a href="twierdza.md">Twierdza Krzyżowiec</a></li>
+<li><a href="wiedzmin.html">Wiedźmin 3: Dziki Gon</a></li>
+<li><a href="ark.html">Ark: Survival Evolved</a></li>
+<li><a href="twierdza.html">Twierdza Krzyżowiec</a></li>
 </ul>
