--- a/wiedzmin.html
+++ b/wiedzmin.html
@@ -20,9 +20,9 @@ dzikich lasów po tętniące życiem miasta.</p>
 <p>Wiedźmin 3 jest uznawany za jeden z najlepiej wyglądających tytułów
 RPG. Oprawa graficzna oraz ścieżka dźwiękowa są na najwyższym
 poziomie.</p>
-<p><img src="https://example.com/wiedzmin3_walka.jpg"
+<p><img src="https://cdn01.dziennikwschodni.pl/media/news/2015/2015-05/f41ec1102a4d37e6a2f0a53a3b6fddd7.jpg"
 alt="Wiedźmin 3 - Walka z potworem" /> <img
-src="https://example.com/wiedzmin3_pejzaz.jpg"
+src="https://www.gry-online.pl/Galeria/Html/Poradniki/1615/810292156.jpg"
 alt="Wiedźmin 3 - Pejzaż" /></p>
 <h2 id="linki">Linki:</h2>
 <ul>
