--- a/twierdza.html
+++ b/twierdza.html
@@ -21,9 +21,9 @@ przeciwników.</p>
 <p>Gra posiada prostą, ale bardzo charakterystyczną grafikę, która
 idealnie oddaje klimat średniowiecznych oblężeń i walk. Dźwięk i muzyka
 są dopasowane do atmosfery gry.</p>
-<p><img src="https://example.com/twierdza_krzyzowiec_walka.jpg"
+<p><img src="https://static.muve.pl/uploads/product-gallery/0146/9332/ss-1697adcf07a1465bf520d2d233e57bdcd18fe141-1920x1080.jpg"
 alt="Twierdza Krzyżowiec - Walka" /> <img
-src="https://example.com/twierdza_krzyzowiec_zamek.jpg"
+src="https://i.ytimg.com/vi/2eaKT_qRnQE/maxresdefault.jpg"
 alt="Twierdza Krzyżowiec - Zamek" /></p>
 <h2 id="linki">Linki:</h2>
 <ul>
