--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
-<h1 id="witamy-na-stronie-poświęconej-grom-komputerowym">Witamy na
-stronie poświęconej grom komputerowym</h1>
-<p>Witaj na naszej stronie, która jest poświęcona trzem grom
-komputerowym: <strong>Wiedźmin 3</strong>, <strong>Ark: Survival
-Evolved</strong> oraz <strong>Twierdza Krzyżowiec</strong>. Każda z tych
-gier oferuje coś wyjątkowego i z pewnością znajdziesz coś dla
-siebie.</p>
-<p>Na każdej stronie znajdziesz szczegółowe informacje na temat gier,
-ich świata, mechanik oraz linki do przydatnych informacji. Zapraszam do
-odkrywania!</p>
-<h2 id="linki-do-stron">Linki do stron:</h2>
+<h1 id="computer-and-console-games">Computer and Console Games</h1>
+<h2 id="introduction-to-gaming">Introduction to Gaming</h2>
+<p>The world of <strong>computer and console games</strong> is vast, offering a wide range of experiences for players of all tastes. From immersive role-playing games (RPGs) like <strong>Elden Ring</strong> to strategy games like <strong>Civilization VI</strong>, these games provide rich environments, complex narratives, and interactive gameplay. Games are not just a form of entertainment but have become an integral part of modern culture, with millions of players engaging in everything from casual mobile games to competitive esports.</p>
+<p>The gaming industry has evolved tremendously over the years, and now, with the rise of online multiplayer games, people can connect and play together, regardless of geographical boundaries. Gaming communities form the backbone of many popular titles, including <strong>Don&#39;t Starve Together</strong>, <strong>Cyberpunk 2077</strong>, and others. As technology advances, games are becoming more realistic, immersive, and engaging, offering experiences that rival even traditional forms of media like movies and television.</p>
+<h2 id="our-gaming-pages">Our Gaming Pages</h2>
+<p>We have a collection of pages created by our group members, each dedicated to a specific game. These pages provide detailed information, reviews, and insights into some of the most popular and influential games in the industry today. Each member has contributed their knowledge and passion for gaming, and we&#39;re excited to share their work with you.</p>
 <ul>
-<li><a href="wiedzmin.html">Wiedźmin 3: Dziki Gon</a></li>
-<li><a href="ark.html">Ark: Survival Evolved</a></li>
-<li><a href="twierdza.html">Twierdza Krzyżowiec</a></li>
+<li><a href="#"><strong>Elden Ring - An Epic Action RPG</strong></a> - Explore the world of Elden Ring and dive into its rich lore, gameplay mechanics, and expansive world.</li>
+<li><a href="#"><strong>Cyberpunk 2077 - The Future of Gaming</strong></a> - Discover the futuristic world of Cyberpunk 2077, a game that blends RPG elements with an open-world narrative.</li>
+<li><a href="#"><strong>Don&#39;t Starve Together - Survive or Perish</strong></a> - Learn how to survive in the dark, whimsical world of Don&#39;t Starve Together, a game where teamwork is crucial.</li>
 </ul>
